removed gradle support, updated spring-ide extensions for Eclipse 4.8, and updated STS4 extension pack to latest milestone version for Eclipse 4.8

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -341,55 +341,110 @@
                    url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
              </overview>
           </connectorDescriptor>
+
+          <!-- Groovy-Eclipse for Photon 4.8 -->
+           <connectorDescriptor
+                 categoryId="com.springsource.sts.discovery-directory.framework.support"
+                 description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+                 id="org.codehaus.groovy.eclipse.feature"
+                 kind="task, document"
+                 license="Free, EPL/ASL"
+                 groupId="certified"
+                 name="Groovy-Eclipse"
+                 provider="Codehaus.org"
+                 platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+     			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.8">
+              <iu id="org.codehaus.groovy.eclipse.feature" />
+              <iu id="org.codehaus.groovy.jdt.patch" />
+              <icon
+                    image32="images/groovy_32.png"></icon>
+              <overview
+                    summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+                    url="http://groovy.codehaus.org/Eclipse+Plugin">
+              </overview>
+           </connectorDescriptor>
+
+           <connectorDescriptor
+                 categoryId="com.springsource.sts.discovery-directory.framework.support"
+                 description="This feature provides the Groovy 2.4 compiler for Groovy-Eclipse.  Once installed, the 2.4 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+                 id="org.codehaus.groovy24.feature"
+                 kind="task, document"
+                 license="Free, EPL/ASL"
+                 groupId="certified"
+                 name="Groovy 2.4 Compiler for Groovy-Eclipse"
+                 provider="Codehaus.org"
+                 platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+     			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.8">
+              <iu id="org.codehaus.groovy24.feature" />
+              <icon
+                    image32="images/groovy_32.png"></icon>
+              <overview
+                    summary="The Groovy 2.4 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                    url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+              </overview>
+           </connectorDescriptor>
+		 
+           <connectorDescriptor
+                 categoryId="com.springsource.sts.discovery-directory.framework.support"
+                 description="This feature provides the Groovy 2.5 compiler for Groovy-Eclipse.  Once installed, the 2.5 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+                 id="org.codehaus.groovy24.feature"
+                 kind="task, document"
+                 license="Free, EPL/ASL"
+                 groupId="certified"
+                 name="Groovy 2.5 Compiler for Groovy-Eclipse"
+                 provider="Codehaus.org"
+                 platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+     			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.8">
+              <iu id="org.codehaus.groovy25.feature" />
+              <icon
+                    image32="images/groovy_32.png"></icon>
+              <overview
+                    summary="The Groovy 2.5 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                    url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+              </overview>
+           </connectorDescriptor>
+		 
+           <connectorDescriptor
+                 categoryId="com.springsource.sts.discovery-directory.framework.support"
+                 description="This feature provides the Groovy 2.6 compiler for Groovy-Eclipse.  Once installed, the 2.6 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
+                 id="org.codehaus.groovy24.feature"
+                 kind="task, document"
+                 license="Free, EPL/ASL"
+                 groupId="certified"
+                 name="Groovy 2.6 Compiler for Groovy-Eclipse"
+                 provider="Codehaus.org"
+                 platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+     			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.8">
+              <iu id="org.codehaus.groovy26.feature" />
+              <icon
+                    image32="images/groovy_32.png"></icon>
+              <overview
+                    summary="The Groovy 2.6 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+                    url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
+              </overview>
+           </connectorDescriptor>
+		 
+           <connectorDescriptor
+                 categoryId="com.springsource.sts.discovery-directory.framework.support"
+                 description="This feature provides integration between Groovy-Eclipse and M2Eclipse. Only install this feature if you are using Groovy and Maven inside of STS"
+                 id="org.codehaus.groovy.m2eclipse.feature"
+                 kind="task, document"
+                 license="Free, EPL"
+                 groupId="certified"
+                 name="Groovy-Eclipse Configurator for M2Eclipse"
+                 provider="Codehaus.org"
+                 platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+     			siteUrl="http://dist.springsource.org/snapshot/GRECLIPSE/e4.8">
+              <iu id="org.codehaus.groovy.m2eclipse.feature" />
+              <iu id="org.codehaus.groovy.jdt.patch" />
+              <icon
+                    image32="images/groovy_32.png"></icon>
+              <overview
+                    summary="This feature provides the Groovy-Eclipse configurator for M2Eclipse"
+                    url="http://groovy.codehaus.org/Groovy-Eclipse+compiler+plugin+for+Maven">
+              </overview>
+           </connectorDescriptor>
       <!-- END Groovy-Eclipse -->
-
-      <!-- BEGIN Gradle-IDE -->
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="For those not yet ready to move onto BuildShip, this is the old STS support for importing and working with Gradle projects in STS, automatic dependency management, executing Gradle tasks."
-            id="org.springsource.ide.eclipse.gradle.feature"
-            kind="task, document"
-            groupId="certified"
-            license="Free, EPL"
-            name="Gradle (STS Legacy) Support"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6">
-<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.6"> -->
-<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.6"> -->
-<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.6"> -->
-         <icon
-               image32="images/gradle_32.png">
-         </icon>
-         <overview
-               summary="Support for importing and working with Gradle projects in STS, automatic dependency management, executing Gradle tasks."
-               url="http://static.springsource.org/sts/docs/latest/reference/html/gradle/index.html">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="For those not yet ready to move onto BuildShip, this is the old STS support for importing and working with Gradle projects in STS, automatic dependency management, executing Gradle tasks."
-            id="org.springsource.ide.eclipse.gradle.feature"
-            kind="task, document"
-            groupId="certified"
-            license="Free, EPL"
-            name="Gradle (STS Legacy) Support"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7">
-<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
-<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
-<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
-         <icon
-               image32="images/gradle_32.png">
-         </icon>
-         <overview
-               summary="Support for importing and working with Gradle projects in STS, automatic dependency management, executing Gradle tasks."
-               url="http://static.springsource.org/sts/docs/latest/reference/html/gradle/index.html">
-         </overview>
-      </connectorDescriptor>
-      <!-- END Gradle-IDE -->
 
       <!-- BEGIN STS4 Language Server -->
       <connectorDescriptor
@@ -469,7 +524,7 @@
             name="Spring Tools 4 Public Beta - Early Access Extension Pack"
             provider="Pivotal Inc."
             platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.2)(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/sts4-language-server-integrations/20180406/">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/sts4-language-server-integrations/20180629/">
          <iu id="org.springframework.tooling.boot.ls.feature" />
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.integration.feature" />
          <iu id="org.springframework.tooling.bosh.ls.feature" />
@@ -553,6 +608,40 @@
                summary="Full-featured support for working with Spring projects.">
          </overview>
       </connectorDescriptor>
+	  
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Full-featured support for working with Spring projects"
+            id="org.springframework.ide.eclipse.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE"
+            provider="Pivotal Software, Inc."
+            platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.8">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
+         <iu id="org.springframework.ide.eclipse.feature" />
+         <iu id="org.springframework.ide.eclipse.aop.feature" />
+         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
+         <iu id="org.springframework.ide.eclipse.security.feature" />
+         <iu id="org.springframework.ide.eclipse.webflow.feature" />
+         <iu id="org.springframework.ide.eclipse.batch.feature" />
+         <iu id="org.springframework.ide.eclipse.integration.feature" />
+         <iu id="org.springframework.ide.eclipse.autowire.feature" />
+         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
+         <iu id="org.springframework.ide.eclipse.maven.feature" />
+         <iu id="org.springframework.ide.eclipse.data.feature" />
+         <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
+         <icon
+               image32="images/spring.png">
+         </icon>
+         <overview
+               summary="Full-featured support for working with Spring projects.">
+         </overview>
+      </connectorDescriptor>
       <!-- END Spring-IDE -->
 
       <!-- BEGIN Spring-IDE Roo Extension-->
@@ -589,6 +678,28 @@
             provider="Pivotal Software, Inc., Disid"
             platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
 			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
+         <icon
+               image32="images/spring.png">
+         </icon>
+         <overview
+               summary="Spring IDE Extension to support Spring Roo development from within the IDE">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring IDE Extension to support Spring Roo development from within the IDE"
+            id="org.springframework.ide.eclipse.roo.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE - Roo Extension"
+            provider="Pivotal Software, Inc., Disid"
+            platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.8">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
@@ -876,6 +987,29 @@
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
 			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7">
+<!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
+<!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
+         <icon
+               image32="images/spring.png">
+         </icon>
+         <overview
+               summary="%tcserver.description"
+               url="http://www.springsource.com/products/tcserver/devedition">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.runtimes"
+            description="Pivotal tc Server Integration for Eclipse"
+            id="com.vmware.vfabric.ide.eclipse.tcserver"
+            kind="task"
+            license="Free, EPL"
+            name="Pivotal tc Server Integration for Eclipse"
+            provider="Pivotal Software, Inc."
+            platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
+			siteUrl="http://download.springsource.com/release/TOOLS/update/e4.8">
 <!--            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/snapshot/TOOLS/nightly/e4.7"> -->
 <!--            siteUrl="http://download.springsource.com/release/TOOLS/update/e4.7"> -->
