--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -488,7 +488,7 @@
       </connectorDescriptor>
 
 	  <!-- Spring Tools 4 Public Beta - Early Access Extension Pack -->
-      <connectorDescriptor
+<!--      <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Spring Tools 4 Public Beta - Early Access Extension Pack"
             id="org.springframework.tooling.boot.java.ls.feature"
@@ -512,31 +512,33 @@
 			   for production use. Once the first full version of the Spring Tools 4 got released, we recommend to start with a fresh Spring Tools 4 distribution
 			   installation instead of adding Spring Tools 4 features into an existing STS 3.9.x installation.">
          </overview>
-      </connectorDescriptor>
+      </connectorDescriptor>-->
 
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Spring Tools 4 Public Beta - Early Access Extension Pack"
+            description="Spring Tools 4 Add-On Extension Pack"
             id="org.springframework.tooling.boot.java.ls.feature"
             kind="task"
             groupId="certified"
             license="Free, EPL"
-            name="Spring Tools 4 Public Beta - Early Access Extension Pack"
+            name="Spring Tools 4 Add-On Extension Pack"
             provider="Pivotal Inc."
-            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.2)(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/sts4-language-server-integrations/20180629/">
-         <iu id="org.springframework.tooling.boot.ls.feature" />
-         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.integration.feature" />
-         <iu id="org.springframework.tooling.bosh.ls.feature" />
-         <iu id="org.springframework.tooling.concourse.ls.feature" />
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.6)(platform.version&gt;=4.9.0)(platform.version&lt;=4.9.9))"
+			siteUrl="http://download.springsource.com/release/TOOLS/sts4/update/latest/">
+         <iu id="org.springframework.tooling.boot.ls.feature"/>
+         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
+         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.integration.feature"/>
+         <iu id="org.springframework.tooling.bosh.ls.feature"/>
+         <iu id="org.springframework.tooling.concourse.ls.feature"/>
+         <iu id="org.springframework.tooling.ls.eclipse.commons"/>
+         <iu id="org.springframework.tooling.ls.eclipse.gotosymbol"/>
          <icon
                image32="images/sts4-32.png">
          </icon>
          <overview
-               summary="The Spring Tools 4 Public Beta - Early Access Extension Pack allows you to install the latest public beta of the Spring Tools 4 features as
-			   an early-access feature into an existing STS 3.9.x installation. This is for early adopters that want to try the new Spring Tools 4 features and not meant
-			   for production use. Once the first full version of the Spring Tools 4 got released, we recommend to start with a fresh Spring Tools 4 distribution
-			   installation instead of adding Spring Tools 4 features into an existing STS 3.9.x installation.">
+               summary="The Spring Tools 4 Add-On Extension Pack allows you to install the latest version of the Spring Tools 4 features as
+			   an add-on into an existing STS 3.9.x installation. Please keep in mind that this add-on is not meant for production use. We recommend to migrate
+			   to the full Spring Tools4 for Eclipse distribution instead as soon as possible.">
          </overview>
       </connectorDescriptor>
 
