--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -517,7 +517,7 @@
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Spring Tools 4 Add-On Extension Pack"
-            id="org.springframework.tooling.boot.java.ls.feature"
+            id="org.springframework.tooling.boot.ls.feature"
             kind="task"
             groupId="certified"
             license="Free, EPL"
@@ -530,8 +530,6 @@
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.integration.feature"/>
          <iu id="org.springframework.tooling.bosh.ls.feature"/>
          <iu id="org.springframework.tooling.concourse.ls.feature"/>
-         <iu id="org.springframework.tooling.ls.eclipse.commons"/>
-         <iu id="org.springframework.tooling.ls.eclipse.gotosymbol"/>
          <icon
                image32="images/sts4-32.png">
          </icon>
